@@ -153,42 +153,51 @@ BEGIN
                     IDC_STATIC,18,144,196,17
 END
 
-IDD_MENU DIALOG DISCARDABLE  0, 0, 332, 234
+IDD_MENU DIALOG DISCARDABLE  0, 0, 332, 263
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "StepMania Tools Main Menu"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "Close",IDOK,275,215,50,14
+    DEFPUSHBUTTON   "Close",IDOK,275,242,50,14
     CONTROL         140,IDC_STATIC,"Static",SS_BITMAP,0,0,332,38
-    PUSHBUTTON      "Export Packages",IDC_EXPORT_PACKAGES,20,121,70,15
+    PUSHBUTTON      "Export Packages",IDC_EXPORT_PACKAGES,20,120,70,15
     LTEXT           "Choose this option to create .smzip files that you can share with other StepMania and DWI users.  A .smzip package can contain songs, courses, themes, background animations, and more.",
                     IDC_STATIC,105,115,215,25
     GROUPBOX        ".smzip Packages",IDC_STATIC,5,100,320,50
-    GROUPBOX        "Themes",IDC_STATIC,5,155,320,50
-    PUSHBUTTON      "Convert Theme",IDC_CONVERT_THEME,20,175,70,15
-    LTEXT           "Choose this option to convert a StepMania 3.0 theme to the StepMania 4.0 theme format.  This tool will not convert any theme metrics.  You'll need to convert these by hand.",
-                    IDC_STATIC,105,170,215,25
+    GROUPBOX        "Themes",IDC_STATIC,5,155,320,82
+    PUSHBUTTON      "Analyze Elements",IDC_ANALYZE_ELEMENTS,20,174,70,15
     PUSHBUTTON      "Edit Installations",IDC_EDIT_INSTALLATIONS,20,65,70,15
     LTEXT           "Choose this option to edit the list of locations where you have StepMania or DWI installed.  When you double-click on a .smzip file, you can choose to install the package to any of these locations.",
                     IDC_STATIC,105,60,215,25
     GROUPBOX        "Installations",IDC_STATIC,5,45,320,50
+    PUSHBUTTON      "Edit Metrics",IDC_EDIT_METRICS,19,208,70,15
+    LTEXT           "This is a user-friendly interface for editing the metrics of a theme.  It will warn you of misnamed and redundant metrics.",
+                    IDC_STATIC,102,206,215,25
+    LTEXT           "This function will catch mistakes in theme element naming.  Also, it gives you the option to convert a StepMania 3.0 theme to the StepMania 4.0 naming scheme.",
+                    IDC_STATIC,103,168,215,25
 END
 
 IDD_CONVERT_THEME DIALOG DISCARDABLE  0, 0, 332, 234
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Convert Theme"
+CAPTION "Theme Elements"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "Close",IDOK,275,213,50,14
-    CONTROL         143,IDC_STATIC,"Static",SS_BITMAP,0,0,332,38
-    LISTBOX         IDC_LIST_THEMES,16,58,110,137,LBS_SORT | 
+    CONTROL         144,IDC_STATIC,"Static",SS_BITMAP,0,0,332,38
+    LISTBOX         IDC_LIST_THEMES,7,46,110,181,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Convert",IDC_BUTTON_CONVERT,135,70,50,15,WS_DISABLED
-    GROUPBOX        "Themes",IDC_STATIC,7,44,318,161
+    PUSHBUTTON      "Convert from 3.0 to 4.0",IDC_BUTTON_CONVERT,174,59,95,
+                    15,WS_DISABLED
     LTEXT           "This will convert a StepMania 3.0 theme to the StepMania 4.0 theme format.  After converting a theme, it will no longer be compatible with StepMania 3.0.  Be sure to make a backup if this is important to you.",
-                    IDC_STATIC,144,115,170,43
+                    IDC_STATIC,129,82,189,34
     LTEXT           "This tool will not convert any theme metrics.  You'll need to convert these by hand.",
-                    IDC_STATIC,143,165,174,20
+                    IDC_STATIC,129,123,189,19
+    GROUPBOX        "Convert",IDC_STATIC,123,46,202,102
+    GROUPBOX        "Analyze",IDC_STATIC,123,153,202,54
+    LTEXT           "Check for redundant or possibly midnamed theme elements.",
+                    IDC_STATIC,130,185,186,18
+    PUSHBUTTON      "Analyze Elements",IDC_BUTTON_ANALYZE,173,164,95,15,
+                    WS_DISABLED
 END
 
 
@@ -280,7 +289,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 325
         TOPMARGIN, 7
-        BOTTOMMARGIN, 227
+        BOTTOMMARGIN, 256
     END
 
     IDD_CONVERT_THEME, DIALOG
